<?xml version="1.0"?>
<package format="2">
  <name>gbplanner</name>
  <version>0.0.0</version>
  <description>Graph based planning algorithm</description>
  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>kdtree</depend>
  <depend>voxblox_ros</depend>
  <depend>planner_common</depend>
  <depend>planner_msgs</depend>
  <depend>planner_semantic_msgs</depend>
  <depend>adaptive_obb</depend>
  <depend>pcl_ros</depend>
  
</package>
