<?xml version="1.0"?>
<package format="2">
  <name>gbplanner_ros</name>
  <version>0.0.0</version>
  <description>Dependencies for the gbplanner</description>
  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>gbplanner</depend>
  <depend>planner_control_interface</depend>
</package>
