<?xml version="1.0"?>
<package format="2">
  <name>kdtree</name>
  <version>0.0.0</version>
  <description>
      kdtree functionality
  </description>
  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>TBD</license>
  
  <author>Andreas Bircher</author>
  <author>John Tsiombikas</author>
  <author>Tamas Nepusz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
