<?xml version="1.0"?>
<package format="2">
  <name>planner_common</name>
  <version>1.0.0</version>
  <description>Common packages for planning purposes</description>

  <maintainer email="mihir.dharmadhikari@gmail.com">Mihir Dharmadhikari</maintainer>
  <maintainer email="tung.dang@nevada.unr.edu">Tung Dang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>kdtree</depend>
  <depend>voxblox_ros</depend>
  <depend>planner_msgs</depend>
  <depend>planner_semantic_msgs</depend>
  <depend>roscpp_serialization</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>

</package>
